--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 <p>nohu99.net</p>
 <p>play.sicbo.vin</p>
 <p>play.top86.win</p>
-
+<p>baomoi.com</p>        
     </header>
     </body>
 </html>
+
