--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
 <p>thanquay247.vip</p>
 <p>tx68.vin</p>
 <p>nohu99.net</p>
+<p>xnxx.com</p>
+<p>pornhub.com</p>
 <p>play.sicbo.vin</p>
 <p>play.top86.win</p>
-<p>baomoi.com</p>        
+<p>shoe.eu.com/</p>        
     </header>
     </body>
 </html>
+
 
