--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
 <p>pornhub.com</p>
 <p>play.sicbo.vin</p>
 <p>play.top86.win</p>
-<p>shoe.eu.com/</p>        
+<p>shoe.eu.com</p>
+<p>ae39.net</p>
     </header>
     </body>
 </html>
+
 
 
